2000-05-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_BIGP):  Don't use SCM_SMOB_PREDICATE in header
	file:  Code using numbers should not be required to include
	smob.h.

2000-05-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* coop-threads.c.cygnus, coop-threads.h.cygnus, fsu-pthreads.h,
	mit-pthreads.c, mit-pthreads.h:  Deleted.

	* Makefile.am (EXTRA_DIST), scmsigs.c, threads.[ch]:  Drop
	references to deleted files and fsu/mit thread support in
	general.

2000-05-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hooks.c (symbol_name, scm_create_hook):  Restored the original
	behaviour of scm_create_hook.  Changing it was bad as Carl
	R. Witty has pointed out.

	* gc.c (scm_init_gc):  We can still rely on scm_create_hook to
	protect the object.

2000-05-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_init_gc):  Protect scm_after_gc_hook, since this will
	soon not be done by scm_create_hook any longer.

	* hooks.c (make_hook, print_hook, scm_create_hook,
	scm_make_hook_with_name, scm_make_hook), hooks.h (SCM_HOOK_NAME,
	SCM_HOOK_PROCEDURES, SCM_SET_HOOK_PROCEDURES,
	scm_make_hook_with_name), init.c (scm_boot_guile_1):  Hooks no
	longer have names.  As an intermediate solution, the name
	predicate is emulated via object properties, but use of this
	feature is deprecated.

	* hooks.h (scm_free_hook):  Removed, as it is never defined.

2000-05-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.[ch] (SCM_POSFIXABLE, SCM_NEGFIXABLE, SCM_FIXABLE):
	Un-deprecated since otherwise user code can't determine whether a
	number fits into an inum any longer.  The names should be changed
	some time, though.

	* numbers.c (scm_big2inum):  Eliminated use of SCM_UNEGFIXABLE.

	* tags.h (SCM_UNPACK_CAR):  Deprecated.

2000-05-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* filesys.h (SCM_OPDIRP), fluids.h (SCM_FLUIDP, SCM_FLUID_NUM),
	fports.h (SCM_OPFPORTP, SCM_OPINFPORTP, SCM_OPOUTFPORTP), hooks.h
	(SCM_HOOK_ARITY), keywords.h (SCM_KEYWORDP, SCM_KEYWORDSYM),